--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Ibarra+Real+Nova|UnifrakturCook:700&display=swap');
+
 $black: hsla(210, 0, 7.5%, .85);
 $gray: hsla(210, 0, 50%, .85);
 $light-gray: hsla(0, 0, 65%, .85);
