--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -1,11 +1,12 @@
-@import url('https://fonts.googleapis.com/css?family=Ibarra+Real+Nova|UnifrakturCook:700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Ibarra+Real+Nova|Pirata+One&display=swap');
 
 $black: hsla(210, 0, 7.5%, .85);
 $gray: hsla(210, 0, 50%, .85);
 $light-gray: hsla(0, 0, 65%, .85);
 $white: hsl(50, 0, 100%);
 $link: hsla(210, 80%, 30%, .85);
-$header-fonts: UnifrakturCook, sans-serif;
+$body-fonts: 'Ibarra Real Nova', serif;
+$header-fonts: 'Pirata One', sans-serif;
     
 html {
   -ms-text-size-adjust: 100%;
@@ -15,7 +16,7 @@ html {
 body {
   background-color: $white;
   color: $black;
-  font-family: 'Ibarra Real Nova', serif;
+  font-family: $body-fonts;
   font-size: 21px;
   margin: 0;
   padding: 0;
@@ -31,7 +32,7 @@ a {
 }
 
 header {
-  font-family: $header-fonts;
+  font-family: $body-fonts;
   margin: 1em auto 3em;
   max-width: 740px;
 
