--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Ibarra+Real+Nova&display=swap');
 
-$black: hsla(210, 0, 7.5%, .85);
-$gray: hsla(210, 0, 50%, .85);
-$light-gray: hsla(0, 0, 65%, .85);
+$gray-10: hsl(0, 0, 10%);
+$gray-20: hsl(0, 0, 20%);
+$gray-40: hsl(0, 0, 40%);
+$gray-60: hsl(0, 0, 60%);
+$gray-80: hsl(0, 0, 80%);
 $white: hsl(50, 0, 100%);
-$link: hsla(210, 80%, 30%, .85);
+$blue: hsl(210, 70%, 40%);
+$red: hsl(5, 95%, 70%);
 $body-fonts: 'Ibarra Real Nova', serif;
 $header-fonts: 'Ibarra Real Nova', serif;
     
@@ -15,19 +18,32 @@ html {
 
 body {
   background-color: $white;
-  color: $black;
+  color: $gray-20;
   font-family: $body-fonts;
   font-size: 21px;
   margin: 0;
   padding: 0;
   text-rendering: optimizelegibility;
+
+  @media (prefers-color-scheme: dark) {
+    background-color: $gray-10;
+    color: $gray-80;
+  }
 }
 
 a {
-  color: $link;
+  color: $blue;
+
+  @media (prefers-color-scheme: dark) {
+    color: $red;
+  }
 
   &:hover {
-    color: lighten($link, 15%);
+    color: lighten($blue, 15%);
+
+    @media (prefers-color-scheme: dark) {
+      color: lighten($red, 15%);
+    }
   }
 }
 
@@ -37,14 +53,22 @@ header {
   max-width: 740px;
 
   a {
-    color: $gray;
+    color: $gray-60;
     margin-left: 21px;
     margin-right: 21px;
     text-decoration: none;
 
+    @media (prefers-color-scheme: dark) {
+      color: $gray-40;
+    }
+
     &:hover {
-      color: lighten($gray, 15%);
+      color: lighten($gray-60, 15%);
       text-decoration: underline;
+
+      @media (prefers-color-scheme: dark) {
+        color: lighten($gray-40, 15%);
+      }
     }
   }
 }
